Arreglado y corregi la palabra arrey por la verdarea Array

--- a/index.html
+++ b/index.html
@@ -1,23 +1,23 @@
 <!DOCTYPE html>
-<html>
-
-    <head>
+<html lang="en">
+<head>
     <meta charset="UTF-8" />
-    <meta name="description" content="practica de trazado de lineas a mano alzada " />
-    <meta name="keywords" content=" practica, estudiante, ufg, canavas, grafico, trazo" />
+    <meta name="description" content="Practica para desarrollo de grafico de linea" />
+    <meta name="keywords" content="Practica,UFG,estudiante, 2025, trazo, Corcio" />
     <meta name="copyright" content="2025 GJCF" />
     <meta name="author" content="Gregorio Javier Corcio Flores" />
-    <meta name="viewport" content="width=divice-width, initial-scale=1.0" />
-    <title>trazos a mano alzada &lt;canvas&gt;</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Trazo a mano alzada con &lt;canvas&lt; (Gregorio Corcio)</title>
     <link rel="stylesheet" href="css/style.css">
-    </head>
-
+</head>
     <body>
-        <cente><h1>Gregorio Javier Corcio Flores</h1></center>
+        <Center><h1>Gregorio Javier Corcio Flores</h1></Center>
         <canvas id="canvas">
-            No se soporta canvas
+            Su navegador no se soporta canvas :(
         </canvas>
-        <p id="limpiar">limpiar canvas</p>
+         <p id="Limpiar">
+            Limpiar Canvas
+        </p>
         <script src="js/script.js"></script>
     </body>
-    </html>
+</html>
